changed the nginx config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,7 @@ server {
     }
 
     location /api/ {
+        rewrite ^/api/(.*) /$1 break;
         proxy_pass http://backend:4001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
