--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,8 +3,12 @@ server {
 
     location / {
         proxy_pass http://frontend:5173;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;       
     }
 
     location /api/ {
@@ -12,6 +16,8 @@ server {
         proxy_pass http://backend:4001/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
